--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -6,7 +6,7 @@ cmake_minimum_required (VERSION 3.8)
 project ("galaxySimulator")
 
 # Add source to this project's executable.
-add_executable (galaxySimulator "main.cpp" "include/sphere.h"  "include/shader.h" "shader.cpp")
+add_executable (galaxySimulator "main.cpp" "include/sphere.h"  "include/shader.h" "shader.cpp" "include/camera.h")
 
 if (CMAKE_VERSION VERSION_GREATER 3.12)
   set_property(TARGET galaxySimulator PROPERTY CXX_STANDARD 20)
