--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -5,8 +5,11 @@ cmake_minimum_required (VERSION 3.8)
 
 project ("galaxySimulator")
 
-# Add source to this project's executable.
-add_executable (galaxySimulator "main.cpp" "include/sphere.h"  "include/shader.h" "shader.cpp" "include/camera.h")
+# Use file(GLOB ...) to find all .cpp files in a directory
+file(GLOB SOURCE_FILES "*.cpp")
+
+# Add source files to this project's executable.
+add_executable (galaxySimulator ${SOURCE_FILES} "include/sphere.h" "include/shader.h" "shader.cpp" "include/camera.h")
 
 if (CMAKE_VERSION VERSION_GREATER 3.12)
   set_property(TARGET galaxySimulator PROPERTY CXX_STANDARD 20)
@@ -36,4 +39,3 @@ add_custom_command(
 # Tell CMake where to find the shaders at runtime
 configure_file(${SHADER_SOURCE_DIR}/shader_config.h.in ${CMAKE_BINARY_DIR}/shader_config.h)
 include_directories(${CMAKE_BINARY_DIR})
-
